--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION_NAME }}
 
-      - name: Copy Deployment package to S3 bucket
-        run: aws s3 rm s3://${{ env.S3_JAR_BUCKET_NAME }}/dynamodb-sqs-app-0.0.1-SNAPSHOT.jar && aws s3 cp "./dynamodb-sqs-app/target/dynamodb-sqs-app-0.0.1-SNAPSHOT.jar" s3://${{ env.S3_JAR_BUCKET_NAME }}/dynamodb-sqs-app-0.0.1-SNAPSHOT.jar
+      - name: Set current date as env variable
+        run: echo "::set-env name=NOW::$(date +'%Y-%m-%dT%H-%M-%S')"
+
+      - name: Copy app jar to S3 bucket
+        run: aws s3 cp ./dynamodb-sqs-app/target/dynamodb-sqs-app-0.0.1-SNAPSHOT.jar s3://${{ env.S3_JAR_BUCKET_NAME }}/dynamodb-sqs-app-$GITHUB_SHA-$NOW.jar
+
+      - name: Copy function jar to S3 bucket
+        run: aws s3 cp ./s3-lambda/target/s3-lambda-0.0.1-SNAPSHOT.jar s3://${{ env.S3_JAR_BUCKET_NAME }}/s3-lambda-$GITHUB_SHA-$NOW.jar
 
       - name: Print that finished
         run: echo 'Finished successfully'
