--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Copy stack template to S3 bucket
         run: |
-          aws s3 rm ./stack-template.json s3://app-jar-bucket-demo/stack/template.json \
+          aws s3 rm s3://app-jar-bucket-demo/stack/template.json \
           && aws s3 cp ./stack-template.json s3://app-jar-bucket-demo/stack/template.json
 
       - name: Deploy stack
